# crewAI-examples

./: .gitignore
report_genius/: .env.example  .gitignore  README.md  pyproject.toml  run.py  test_serpapi.py  test_serper_api.py  test_web_search_tool.py
report_genius/examples/: README.md  generate_report.py  save_report_to_file.py  人工智能在医疗领域的应用_20250702_172904.md
report_genius/src/report_genius/: __init__.py  crew.py  main.py
report_genius/src/report_genius/config/: agents.yaml  tasks.yaml
report_genius/src/report_genius/tools/: __init__.py  web_search_tool.py
